# hourglass

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  package.sh  uninstall.sh
config/: hourglass.service
src/: config.rs  daemon.rs  lib.rs  main.rs  notify.rs  pam.rs  session.rs  state.rs
tests/: config_test.rs  session_test.rs  state_test.rs
